--- a/src/app/blog/list-blogs/list-blogs.component.html
+++ b/src/app/blog/list-blogs/list-blogs.component.html
@@ -1,9 +1,12 @@
 <div class="content">
-    <mat-card *ngFor="let key of manifestMap | async | keyvalue">
-        <mat-card-content (click)="this.router.navigateByUrl(key.key)">
-            <img src="{{ key.value.thumb }}" alt="image" class="image">
-            <h2>{{ key.value.title }}</h2>
-            <span>{{ key.value.time }} min reading</span>
-        </mat-card-content>
-    </mat-card>
+    <ng-container *ngFor="let key of manifestMap | async | keyvalue">
+        <mat-card *ngIf="key.value.tags.length>0">
+            <mat-card-content (click)="this.router.navigateByUrl(key.key)">
+                <img src="{{ key.value.thumb }}" alt="image" class="image">
+                <h2>{{ key.value.title }}</h2>
+                <span>{{ key.value.time }} min reading</span>
+            </mat-card-content>
+        </mat-card>
+    </ng-container>
+   
 </div>
