--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -23,6 +23,9 @@ mat-drawer-container{
     display: flex;
     flex-direction: column;
     margin: 20px;
+    @media (max-width: 800px) {
+        font-size: 3em;
+    }
     span{
         margin-bottom: 20px;
         &:hover{
