--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,7 +43,7 @@ body{
     height: 100vh;
     margin: 0;
     font-family: 'Roboto', sans-serif;
-    font-size: 1.15em;
+    font-size: 1.15rem;
 }
 img{
   max-width: 90vw !important;
