adding line-height: 30px;

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,6 +44,7 @@ body{
     margin: 0;
     font-family: 'Roboto', sans-serif;
     font-size: 1.15rem;
+    line-height: 30px;
 }
 img{
   max-width: 90vw !important;
