prismajs languajes suppport updated

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
       </button>
       <img src="/assets/logo.png">
     </div>
+    <a href="https://github.com/bylidev/byli-cms" style="font-size: 10px;color: darkgray;">Powered by BYLI-CMS</a>
   </mat-toolbar-row>
 </mat-toolbar>
 <mat-drawer-container autosize>
