--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,6 +1,6 @@
 @use '@angular/material' as mat;
 $mobile: 600px;
-$hover-link-color: #0075c9;
+$hover-link-color: #81cd87;
 $card-max-width: 270px;
 $card-margin: 5px;
 $max-columns: 3;
