--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
         <img src="/assets/logo.png">
       </a>
     </div>
-    <a href="https://github.com/bylidev/byli-cms" style="font-size: 10px;color: darkgray;">Powered by BYLI-CMS</a>
+    <a href="https://github.com/bylidev/byli-cms" style="font-size: 10px;color: white;">Powered by BYLI-CMS</a>
   </mat-toolbar-row>
 </mat-toolbar>
 <mat-drawer-container autosize>
