--- a/src/variables.scss
+++ b/src/variables.scss
@@ -5,34 +5,34 @@ $card-max-width: 270px;
 $card-margin: 5px;
 $max-columns: 3;
 $byli-primary: mat.define-palette((
-    50 : #E0F2F1,
-    100 : #B2DFDB,
-    200 : #80CBC4,
-    300 : #4DB6AC,
-    400 : #26A69A,
-    500 : #202556,
-    600 : #00897B,
-    700 : #00796B,
-    800 : #00695C,
-    900 : #004D40,
-    A100 : #A7FFEB,
-    A200 : #64FFDA,
-    A400 : #1DE9B6,
-    A700 : #00BFA5,
-    contrast: (
-        50 : #000000,
-        100 : #000000,
-        200 : #000000,
-        300 : #000000,
-        400 : #ffffff,
-        500 : #ffffff,
-        600 : #ffffff,
-        700 : #ffffff,
-        800 : #ffffff,
-        900 : #ffffff,
-        A100 : #000000,
-        A200 : #000000,
-        A400 : #000000,
-        A700 : #000000,
-    )
+  50 : #E0F2F1,
+  100 : #B2DFDB,
+  200 : #80CBC4,
+  300 : #4DB6AC,
+  400 : #26A69A,
+  500 : #63b175,
+  600 : #00897B,
+  700 : #00796B,
+  800 : #00695C,
+  900 : #004D40,
+  A100 : #A7FFEB,
+  A200 : #64FFDA,
+  A400 : #1DE9B6,
+  A700 : #00BFA5,
+  contrast: (
+    50 : #000000,
+    100 : #000000,
+    200 : #000000,
+    300 : #000000,
+    400 : #ffffff,
+    500 : #ffffff,
+    600 : #ffffff,
+    700 : #ffffff,
+    800 : #ffffff,
+    900 : #ffffff,
+    A100 : #000000,
+    A200 : #000000,
+    A400 : #000000,
+    A700 : #000000,
+  )
 ), 500);
