--- a/src/app/blog/list-blogs/list-blogs.component.scss
+++ b/src/app/blog/list-blogs/list-blogs.component.scss
@@ -11,6 +11,7 @@
 
 mat-drawer-container{
     flex: 1;
+  background: white;
 }
 
 .content{
@@ -25,7 +26,7 @@ mat-drawer-container{
         margin: 25px;
         width: 100%;
         flex-wrap: nowrap;
-    }    
+    }
 }
 
 mat-card{
@@ -34,7 +35,7 @@ mat-card{
     max-width: $card-max-width;
     width: auto;
     margin: $card-margin;
-    box-shadow: none;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
     @media (max-width: 800px) {
         width: auto;
         max-width: none;
