--- a/src/styles.scss
+++ b/src/styles.scss
@@ -81,3 +81,7 @@ a {
 a:hover {
   color: darkorange; /* Cambia el color al pasar el mouse sobre el enlace */
 }
+
+.mat-drawer-container {
+  background: white !important;
+}
