--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,8 +15,8 @@
   <mat-drawer mode="side" #drawer>
     <div class="menu-item">
       <ng-container *ngFor="let item of this.menu | async">
-        <span mat-menu-item (click)="drawer.toggle();this.router.navigateByUrl('tag/'+item.tag)">
-          <span> {{item.tag}} <mat-icon style="color: orange" *ngIf="item.size>5 && item.size<99999">trending_up</mat-icon></span>
+        <span color="primary" mat-menu-item (click)="drawer.toggle();this.router.navigateByUrl('tag/'+item.tag)">
+          <span> {{item.tag}} <mat-icon *ngIf="item.size>5 && item.size<99999">trending_up</mat-icon></span>
 
         </span>
       </ng-container>
