--- a/src/styles.scss
+++ b/src/styles.scss
@@ -80,16 +80,7 @@ a {
   text-decoration: none;
 }
 
-/* Estilo para enlaces naranjas */
-a {
-  color: orange;
-}
-
-/* Estilo para enlaces naranjas cuando se están desplazando sobre ellos */
-a:hover {
-  color: darkorange; /* Cambia el color al pasar el mouse sobre el enlace */
-}
-
 .mat-drawer-container {
   background: white !important;
+  overflow: unset !important;
 }
