--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,50 +1,11 @@
 @use '@angular/material' as mat;
-@import '~material-design-icons/iconfont/material-icons.css';
-@import 'variables.scss';
+@import 'src/app/styles/arg-m3-theme.scss';
 
-@include mat.core();
-@include mat.strong-focus-indicators((
-  --border-style: dotted,
-  border-width: 0px,
-  border-radius: 0px,
-));
-
-$my-accent: mat.define-palette(mat.$indigo-palette, A200, A100, A400);
-
-$my-dark-theme: mat.define-dark-theme((
-  color: (
-    primary: $byli-primary,
-    accent: $my-accent,
-  )
-));
-$my-light-theme: mat.define-light-theme((
-  color: (
-    primary: $byli-primary,
-    accent: $my-accent,
-  )
-));
-
-
-
-$my-custom-level: mat.define-typography-level(
-  $font-family: Roboto,
-  $font-weight: 400,
-  $font-size: 1rem,
-  $line-height: 1,
-  $letter-spacing: normal,
-);
-
-@include mat.all-component-themes($my-light-theme);
-
-@include mat.strong-focus-indicators-theme(rgb(75, 134, 168));
-.my-dark-theme {
-  @include mat.all-component-themes($my-dark-theme);
+html{
+  @include mat.core-theme($dark-theme-1);
+  @include mat.button-theme($dark-theme-1);
 }
 
-// Estilo adicional para el tema claro (opcional)
-.my-light-theme {
-  @include mat.all-component-themes($my-light-theme);
-}
 body{
     display: flex;
     width: 100vw;
