--- a/src/app/styles/argen-m3-theme.scss
+++ b/src/app/styles/argen-m3-theme.scss
@@ -4,89 +4,89 @@
 @use 'sass:map';
 @use '@angular/material' as mat;
 
-// Note: Color palettes are generated from primary: #38a0dd
+// Note: Color palettes are generated from primary: #001e2f, secondary: #ff4081, tertiary: #4caf50, neutral: #f5f5f5
 $_palettes: (
   primary: (
     0: #000000,
     10: #001e2f,
-    20: #00344e,
-    25: #003f5e,
-    30: #004b6f,
-    35: #005880,
-    40: #006492,
-    50: #007eb6,
-    60: #2d99d5,
-    70: #52b4f2,
-    80: #8bceff,
+    20: #00344d,
+    25: #00405e,
+    30: #004c6e,
+    35: #00587f,
+    40: #006491,
+    50: #007fb5,
+    60: #3599d2,
+    70: #57b4ee,
+    80: #89ceff,
     90: #c9e6ff,
-    95: #e6f2ff,
+    95: #e5f2ff,
     98: #f6faff,
     99: #fcfcff,
     100: #ffffff,
   ),
   secondary: (
     0: #000000,
-    10: #0c1d29,
-    20: #22323f,
-    25: #2d3d4a,
-    30: #384956,
-    35: #445462,
-    40: #50606e,
-    50: #687988,
-    60: #8293a2,
-    70: #9cadbd,
-    80: #b7c9d9,
-    90: #d3e5f5,
-    95: #e6f2ff,
-    98: #f6faff,
-    99: #fcfcff,
+    10: #3f0018,
+    20: #66002a,
+    25: #7a0034,
+    30: #8f003f,
+    35: #a50049,
+    40: #bb0054,
+    50: #e1266c,
+    60: #ff4c86,
+    70: #ff85a4,
+    80: #ffb1c1,
+    90: #ffd9df,
+    95: #ffecee,
+    98: #fff8f7,
+    99: #fffbff,
     100: #ffffff,
   ),
   tertiary: (
     0: #000000,
-    10: #201634,
-    20: #352b4b,
-    25: #413656,
-    30: #4c4162,
-    35: #584d6f,
-    40: #64597b,
-    50: #7e7195,
-    60: #988bb0,
-    70: #b3a5cc,
-    80: #cfc0e8,
-    90: #eaddff,
-    95: #f6edff,
-    98: #fef7ff,
-    99: #fffbff,
+    10: #002204,
+    20: #00390a,
+    25: #00460f,
+    30: #005313,
+    35: #006018,
+    40: #006e1c,
+    50: #22892f,
+    60: #41a447,
+    70: #5dc05e,
+    80: #78dc77,
+    90: #94f990,
+    95: #c8ffc0,
+    98: #ecffe4,
+    99: #f6fff0,
     100: #ffffff,
   ),
   neutral: (
     0: #000000,
-    10: #1a1c1e,
-    20: #2e3133,
-    25: #393c3e,
-    30: #454749,
-    35: #515355,
-    40: #5d5e61,
-    50: #75777a,
-    60: #8f9193,
-    70: #aaabae,
-    80: #c5c6c9,
-    90: #e2e2e5,
-    95: #f0f0f3,
-    98: #f9f9fc,
-    99: #fcfcff,
+    4: #000c0e,
+    6: #001316,
+    10: #001f24,
+    12: #002429,
+    17: #002f35,
+    20: #00363d,
+    22: #003b42,
+    24: #004047,
+    25: #00424a,
+    30: #004f58,
+    35: #005b66,
+    40: #006874,
+    50: #008391,
+    60: #00a0b0,
+    70: #22bccf,
+    80: #4fd8eb,
+    87: #81e9f9,
+    90: #97f0ff,
+    92: #aef3ff,
+    94: #c5f6ff,
+    95: #d0f8ff,
+    96: #daf9ff,
+    98: #edfcff,
+    99: #f6feff,
     100: #ffffff,
-    4: #0c0e11,
-    6: #111416,
-    12: #1e2022,
-    17: #282a2d,
-    22: #333537,
-    24: #37393c,
-    87: #d9dadd,
-    92: #e7e8eb,
-    94: #edeef1,
-    96: #f3f3f6,
   ),
   neutral-variant: (
     0: #000000,
@@ -96,12 +96,12 @@ $_palettes: (
     30: #41474d,
     35: #4d5359,
     40: #595f65,
-    50: #72787e,
+    50: #71787e,
     60: #8b9198,
     70: #a6acb3,
     80: #c1c7ce,
     90: #dde3ea,
-    95: #ecf1f9,
+    95: #ebf1f8,
     98: #f6faff,
     99: #fcfcff,
     100: #ffffff,
@@ -135,14 +135,17 @@ $_rest: (
 $_primary: map.merge(map.get($_palettes, primary), $_rest);
 $_tertiary: map.merge(map.get($_palettes, tertiary), $_rest);
 
-$dark-theme-1: mat.define-theme((
+$light-theme: mat.define-theme((
+  color: (
+    theme-type: light,
+    primary: $_primary,
+    tertiary: $_tertiary,
+  ),
+));
+$dark-theme: mat.define-theme((
   color: (
     theme-type: dark,
     primary: $_primary,
     tertiary: $_tertiary,
-    use-system-variables: true,
-  ),
-  typography: (
-    use-system-variables: true,
   ),
 ));
