--- a/src/app/blog/scroll-spy/scroll-spy.component.scss
+++ b/src/app/blog/scroll-spy/scroll-spy.component.scss
@@ -1,21 +1,20 @@
 .blog{
   overflow: auto;
+  max-height: 70vh;
+  padding-bottom: 200px;
+  padding-right: 1%;
+  max-width: 40%;
   @media (max-width: 800px) {
+    max-width: 100%;
     overflow: unset;
   }
-  max-height: 60vh;
-  margin-left: 20%;
-  margin-top: 50px;
-  padding-bottom: 200px;
-  padding-right: 10%;
 }
 ul.scrollspy-nav {
   @media (max-width: 800px) {
     display: none;
   }
   padding: 20px;
-  margin-top: 50px;
-  min-width: 350px;
+  max-width: 350px;
   li {
     border-radius: 2px;
     font-size: 14px;
@@ -39,4 +38,5 @@ ul.scrollspy-nav {
 }
 :host {
   display: flex;
+  justify-content: center;
 }
