--- a/src/app/blog/scroll-spy/scroll-spy.component.scss
+++ b/src/app/blog/scroll-spy/scroll-spy.component.scss
@@ -1,26 +1,35 @@
-.blog{
+@use '@angular/material' as mat;
+@use 'src/app/styles/m3-theme' as theme;
+
+.blog {
   overflow: auto;
   max-height: 70vh;
   padding-bottom: 200px;
   padding-right: 1%;
+  padding-left: 1%;
+
   max-width: 40%;
   @media (max-width: 800px) {
-    max-width: 100%;
+    max-width: 100vw;
     overflow: unset;
+    flex: 3 !important;
+    padding-right: 3%;
+    padding-left: 3%;
   }
 }
-ul.scrollspy-nav {
+
+ul {
   @media (max-width: 800px) {
     display: none;
   }
-  padding: 20px;
+  padding: 40px;
   max-width: 350px;
+  list-style: none;
+
   li {
-    border-radius: 2px;
-    font-size: 14px;
-    font-weight: 500;
-    list-style: none;
-    padding: 4px 0 4px 16px;
+    margin-bottom: 10px;
+    font-size: small;
+    cursor: pointer;
 
     > a,
     > a:active,
@@ -36,7 +45,19 @@ ul.scrollspy-nav {
     }
   }
 }
+
 :host {
   display: flex;
   justify-content: center;
+  @media (max-width: 800px) {
+    flex-direction: column;
+  }
+}
+
+:host > div {
+  flex: 1;
+}
+
+.active {
+  color: mat.get-theme-color(theme.$dark-theme, primary, 40);
 }
