--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,46 +1,49 @@
 @import "src/variables.scss";
 
 :host {
-  position: relative;
   display: flex;
-  flex-direction: column;
   flex: 1;
-  width: 100vw;
-  height: 100vh;
-}
-
-mat-drawer {
-  max-width: 400px;
-  font-size: 1.5rem;
+  gap: 30px;
   @media (max-width: 800px) {
-    min-width: 100vh;
+    flex-direction: column;
+    gap: 0px;
   }
 
-}
-
-mat-drawer-container {
-  flex: 1;
-}
-
-
-mat-toolbar-row {
-  justify-content: space-between;
-}
-
-.menu-item {
-  display: flex;
-  flex-direction: column;
-  margin: 25px;
-  max-width: 90vw;
-  span {
-    margin-bottom: 25px;
-
-    &:hover {
-      cursor: pointer;
+  .sidebar {
+    background: rgba(255, 255, 255, 0.051);
+    padding: 20px;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    @media (min-width: 800px) {
+      max-width: 300px;
+      box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
     }
+    gap: 30px;
+  }
 
+  .content {
+    flex: 4;
+    display: flex;
+    max-height: 100vh;
+    justify-content: center;
+  }
+
+  app-cms-watermark {
+    margin-top: auto;
+    text-align: center;
     @media (max-width: 800px) {
-      font-size: 2rem;
+      display: none;
+
+    }
+  }
+
+  app-blog-categories {
+    display: none;
+    @media (min-width: 800px) {
+      display: block;
     }
   }
 }
+
+
