--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,11 @@
 @use '@angular/material' as mat;
-@import 'src/app/styles/m3-theme.scss';
+@import './m3-theme.scss';
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 $theme: $dark-theme;
-mat-toolbar {
-}
-.chip-primary {
-  background: mat.get-theme-color($theme, primary, 40) !important;
-}
+
+@include mat.core();
+@include mat.color-variants-backwards-compatibility($theme);
 
 body {
   @include mat.all-component-themes($theme);
@@ -14,21 +13,87 @@ body {
   width: 100vw;
   height: 100vh;
   margin: 0;
-  font-family: 'Roboto', sans-serif;
-  font-size: 1.15rem;
   line-height: 30px;
+  background-color: mat.get-theme-color($theme, background); // Ajusta según el tema
+  color: mat.get-theme-color($theme, on-background);
+  font-family: 'Roboto', sans-serif;
+  font-size: 1rem;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+}
+
+$font-size-h1: 2.5rem;
+$font-size-h2: 2rem;
+$font-size-h3: 1.75rem;
+$font-size-h4: 1.5rem;
+$font-size-h5: 1.25rem;
+$font-size-h6: 1rem;
+
+$line-height-h1: 1.2;
+$line-height-h2: 1.3;
+$line-height-h3: 1.4;
+$line-height-h4: 1.5;
+$line-height-h5: 1.6;
+$line-height-h6: 1.7;
+
+h1 {
+  font-size: $font-size-h1;
+  line-height: $line-height-h1;
+}
+
+h2 {
+  font-size: $font-size-h2;
+  line-height: $line-height-h2;
+}
+
+h3 {
+  font-size: $font-size-h3;
+  line-height: $line-height-h3;
+}
+
+h4 {
+  font-size: $font-size-h4;
+  line-height: $line-height-h4;
+}
+
+h5 {
+  font-size: $font-size-h5;
+  line-height: $line-height-h5;
+}
+
+h6 {
+  font-size: $font-size-h6;
+  line-height: $line-height-h6;
+}
+
+p {
+  word-wrap: break-word;
+  margin-bottom: 1.5rem;
+}
+
+a {
+  color: mat.get-theme-color($theme, primary, 50) !important;
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 img {
   width: 100%;
 }
 
-p {
-  word-wrap: break-word;
-}
+.chip-primary {
+  background: mat.get-theme-color($theme, primary, 50) !important;
+  color: white !important;
 
-h1 {
-  line-height: 50px;
+  > span > span > .mat-mdc-chip-action-label {
+    color: white !important;
+  }
 }
 
 ::-webkit-scrollbar {
@@ -44,21 +109,3 @@ h1 {
   height: 30px;
   background-color: grey;
 }
-
-a {
-  color: mat.get-theme-color($dark-theme, primary, 40);
-}
-
-.mat-drawer{
-  border-top-right-radius: unset !important;
-}
-.mat-drawer-content {
-  display: flex !important;
-  flex: 1;
-  overflow: unset !important;
-}
-.mat-drawer-container{
-  overflow: auto !important;
-}
-@include mat.core();
-@include mat.color-variants-backwards-compatibility($theme);
