--- a/app/src/app/blog/list-blogs/list-blogs.component.html
+++ b/app/src/app/blog/list-blogs/list-blogs.component.html
@@ -1,4 +1,13 @@
 <div class="content">
+
+<!-- byli -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:250px;height:500px"
+     data-ad-client="ca-pub-2770026091619544"
+     data-ad-slot="7383300068"></ins>
+     <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
     <ng-container *ngFor="let entry of (manifestMap | async)?.toArray()">
       <mat-card *ngIf="entry[1].tags.length > 0">
         <mat-card-content (click)="router.navigateByUrl(entry[0])">
