--- a/app/src/app/blog/list-blogs/list-blogs.component.html
+++ b/app/src/app/blog/list-blogs/list-blogs.component.html
@@ -8,13 +8,16 @@
         </mat-card-content>
       </mat-card>
     </ng-container>
-    <ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-2770026091619544"
-     data-ad-slot="9278033332"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-     <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
+    <mat-card>
+      <ins class="adsbygoogle"
+      style="display:block"
+      data-ad-client="ca-pub-2770026091619544"
+      data-ad-slot="9278033332"
+      data-ad-format="auto"
+      data-full-width-responsive="true"></ins>
+    </mat-card>
+
 </div>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
