--- a/app/src/app/blog/scroll-spy/scroll-spy.component.scss
+++ b/app/src/app/blog/scroll-spy/scroll-spy.component.scss
@@ -2,8 +2,7 @@
 @use '../../../styles' as theme;
 
 .blog {
-  overflow: auto;
-  max-height: 70vh;
+  //overflow: auto;
   padding-bottom: 200px;
   padding-right: 1%;
   padding-left: 1%;
@@ -19,6 +18,8 @@
 }
 
 ul {
+  position: sticky;
+  top: 0;
   @media (max-width: 800px) {
     display: none;
   }
